--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -392,7 +392,7 @@
   </div>
 
   <% if current_user.admin? %>
-    <% @customer.device.definitions.each do |key, device| %>
+    <% @customer.device.definitions.slice(:deliver, :sopac, :stg_telematics).each do |key, device| %>
       <%= render partial: 'shared/check_box', locals: { form: f, name: "customer[devices][#{key}][enable]", checked: to_bool(@customer.devices[key] && @customer.devices[key][:enable]), label: device[:label], help: (t("customers.form.devices.#{key}.help") if device[:help]) } %>
     <% end %>
   <% end %>
