--- a/app/views/stops/_edit.html.haml
+++ b/app/views/stops/_edit.html.haml
@@ -1,4 +1,4 @@
-.container
+.container.mt-1
   - if destination.detail
     .d-flex.align-items-center.justify-items-center.mb-1
       .label.label-default.p-3.mr-2
@@ -39,22 +39,27 @@
         .quantity
           = unit[:quantity]
           = unit[:label]
-  .row
-    .form-group
-      =  bootstrap_form_for stop, url: stop_path, method: :patch, remote: true do |f|
-        %label{ for: 'active_status' }
-          Status
-        .input-group
-          #radiobtn.btn-group
-            %a.btn.btn-primary{ data: { toggle: 'active_status', title: 'intransit' }, class: ('active' if stop.status == 'intransit') }
-              = t('plannings.edit.stop_status.intransit')
-            %a.btn.btn-success{ data: { toggle: 'active_status', title: 'delivered' }, class: ('active' if stop.status == 'delivered') }
-              = t('plannings.edit.stop_status.delivered')
-            %a.btn.btn-warning{ data: { toggle: 'active_status', title: 'exception' }, class: ('active' if stop.status == 'exception') }
-              = t('plannings.edit.stop_status.exception')
-            %a.btn.btn-danger{ data: { toggle: 'active_status', title: 'undelivered' }, class: ('active' if stop.status == 'undelivered')}
-              = t('plannings.edit.stop_status.undelivered')
-          = f.hidden_field :position, { name: 'stop[position]', id: 'active_status_position' }
-          = f.hidden_field :status_updated_at, { name: 'stop[status_updated_at]', id: 'active_status_updated_at' }
-          = f.hidden_field :status, { name: 'stop[status]', id: 'active_status', onchange: "this.form.submit()" }
-          = f.hidden_field :id, { name: 'stop_id' }
+  .form-group.mb-1
+    =  bootstrap_form_for stop, url: stop_path, method: :patch, remote: true do |f|
+      %label{ for: 'active_status' }
+        Status
+      .input-group.col-xs-12
+        #radiobtn
+          .d-flex.align-items-center.justify-content-between{ style: 'width: 100%'}
+            .col-xs-6.d-flex.justify-content-center
+              %a.btn.btn-primary{ data: { toggle: 'active_status', title: 'intransit' }, class: ('active' if stop.status == 'intransit') }
+                = t('plannings.edit.stop_status.intransit')
+            .col-xs-6.d-flex.justify-content-center
+              %a.btn.btn-success{ data: { toggle: 'active_status', title: 'delivered' }, class: ('active' if stop.status == 'delivered') }
+                = t('plannings.edit.stop_status.delivered')
+          .d-flex.align-items-center.justify-content-between
+            .col-xs-6.d-flex.justify-content-center
+              %a.btn.btn-warning{ data: { toggle: 'active_status', title: 'exception' }, class: ('active' if stop.status == 'exception') }
+                = t('plannings.edit.stop_status.exception')
+            .col-xs-6.d-flex.justify-content-center
+              %a.btn.btn-danger{ data: { toggle: 'active_status', title: 'undelivered' }, class: ('active' if stop.status == 'undelivered')}
+                = t('plannings.edit.stop_status.undelivered')
+        = f.hidden_field :position, { name: 'stop[position]', id: 'active_status_position' }
+        = f.hidden_field :status_updated_at, { name: 'stop[status_updated_at]', id: 'active_status_updated_at' }
+        = f.hidden_field :status, { name: 'stop[status]', id: 'active_status', onchange: "this.form.submit()" }
+        = f.hidden_field :id, { name: 'stop_id' }
