--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -710,6 +710,69 @@ input.form-control.number-of-days {
   .stop-status-none {
     background: none;
   }
+
+  .stop-status-icon-intransit::before {
+    font: var(--fa-font-solid);
+    color: #357EC7;
+    content: "\f48b";
+  }
+
+  .stop-status-icon-exception::before {
+    font: var(--fa-font-solid);
+    color: #FBB117;
+    content: "\f071";
+  }
+
+  .stop-status-icon-delivered::before {
+    font: var(--fa-font-solid);
+    color: #58BE13;
+    content: "\f058";
+  }
+
+  .stop-status-icon-undelivered::before {
+    font: var(--fa-font-solid);
+    color: red;
+    content: "\f071";
+  }
+
+  .stop-row {
+    &.stop-row-intransit:after {
+      position: absolute;
+      height: calc(100% + 1px);
+      width: 12px;
+      right: 0;
+      background: $primary-color;
+    }
+
+    &.stop-row-exception:after {
+      position: absolute;
+      height: calc(100% + 1px);
+      width: 12px;
+      right: 0;
+      background: var(--warning);
+    }
+
+    &.stop-row-delivered:after {
+      position: absolute;
+      height: calc(100% + 1px);
+      width: 12px;
+      right: 0;
+      background: var(--success);
+    }
+
+    &.stop-row-undelivered:after {
+      position: absolute;
+      height: calc(100% + 1px);
+      width: 12px;
+      right: 0;
+      background: var(--danger);
+    }
+
+  }
+
+  .ui-state-error{
+    margin-right: -1px
+  }
 }
 
 .flash-content {
